@@ -22,7 +22,6 @@ import com.tikal.jenkins.plugins.multijob.views.MultiJobView;
 
 import net.sf.json.JSONObject;
 
-import org.apache.commons.lang.StringUtils;
 import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.StaplerResponse2;
 
@@ -131,7 +130,7 @@ public class MultiJobProject extends Project<MultiJobProject, MultiJobBuild>
 		}
 
         public boolean getCheckResumeEnvVars() {
-        	return !StringUtils.isBlank(resumeEnvVars);
+        	return resumeEnvVars != null && !resumeEnvVars.isBlank();
         }
 
     @Override
